# miniaturize_no5941

./: README.md  firmware-plan.md
android-app/: INSTALL.md  README.md  build.gradle.kts  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/assets/: app.html
android-app/app/src/main/java/com/ampero/pstat/: MainActivity.kt  NativeBridge.kt
android-app/app/src/main/java/com/ampero/pstat/ble/: BleManager.kt
android-app/app/src/main/res/drawable/: ic_launcher.xml
android-app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android-app/app/src/main/res/values-night/: colors.xml
app/: mockup.html
firmware/: CMakeLists.txt  README.md  app.overlay  prj.conf
firmware/src/: cmd.c  cmd.h  databuf.c  databuf.h  flog.c  flog.h  main.c  meas.c  meas.h  pstat.h  store.c  store.h
hardware/: bom.md  design.md  module-vs-chipdown.md  user-board-review.md
hardware/kicad/: README.md  discrete-potentiostat.kicad_pcb  discrete-potentiostat.kicad_prl  discrete-potentiostat.kicad_pro  discrete-potentiostat.kicad_sch  drc-report.txt
hardware/kicad/generator/: check_nets.py  check_pcb.py  close4.py  copper_fix.py  extract_syms.py  final_fix.py  finish_links.py  gen_pcb.py  gen_sch.py  gnd_fix.py  gnd_fix_auto.py  route_loop.sh  route_pcb.py
